scss/style.scss
/* ... */
@font-face {
    font-family: 'Covenant';
    font-style: normal;
    font-weight: normal;
    font-family: 'Covenant';
    src:  url('../fonts/covenant.eot');
    src:  url('../fonts/covenant.eot?#iefix') format('embedded-opentype'),url('../fonts/covenant.ttf') format('truetype'),url('../fonts/covenant.woff') format('woff'),url('../assets/fonts/covenant.svg#Covenant') format('svg');
}

:root {
    --convrtr-bg-color: rgb(21, 96, 82);
    --convrtr-txt-color: rgb(17, 77, 66);
    --convrtr-bg-dark: #3b4044;
    --bs-bg-success: 21, 96, 82;
    --bs-bg-success-10: #e8f3ee;
    --bs-bg-success-darken-10: #c9e3d7;
    --convrtr-bg-color-rgb: 21, 96, 82;
    --convrtr-bg-color-10: #0f735f;
    --convrtr-bg-color-20: #0e6655;
    --convrtr-bg-color-25: #11806a40;
    --convrtr-bg-color-25-rgb: rgba(17, 128, 106, 0.25);
    --convrtr-bg-color-50-rgb: rgba(17, 128, 106, 0.5);
    --convrtr-bg-color-75-rgb: rgba(17, 128, 106, 0.75);
    --convrtr-bg-color-50: #88c0b5;
    --convrtr-bg-color-50-rgba: 136, 192, 181;
    --convrtr-bg-color-75: #4da08f;
    --convrtr-bg-color-75rbg: 77, 160, 143;
    --convrtr-color-link: 150, 209, 197;
    --convrtr-base-color: #212529;
    --convrtr-link-color: #084f41;
    --convrtr-link-color-dark: #a3cfc6;
    --convrtr-table-header: rgb(209, 231, 220.8);
    --convrtr-row-bg: #212529;
    --convrtr-textarea: rgba(0,0,0,.03);
    --convrtr-row-highlight-color: #dee2e6;
    --convrtr-row-highlight-dark: #212529;
    --convrtr-switch-thumb: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2388c0b5'/%3e%3c/svg%3e");
    --convrtr-switch-checked: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
    --convrtr-nav-link-padding-x: 0.25rem;
    --convrtr-nav-link-padding-y: 0.75rem;
    --convrtr-nav-tabs-border-radius: 0.375rem;
    --convrtr-nav-tabs-border-color: #dee2e6;
    --convrtr-code-opacity: 0.2;
    --bs-bg-dark-opacity: 0.08;
}
[data-bs-theme="dark"] {
    --convrtr-base-color: #dee2e6;
}
body {
    color: var(--convrtr-base-color);
    position: relative;
}
.page-wrap {
    grid-column-start: 2;
    position: relative;
    height: calc(100vh - 4rem);
    margin-top: 4rem;
    display: flex;
    flex-direction: column;
    @media screen and (prefers-reduced-motion: no-preference) {
        scroll-behavior: smooth;
    }
    .section {
        position: relative;
        @media (max-width: 768px) {
            width: 100vw;
        }
    }
    .section.footer {
        margin-top: auto;
    }

    &-home {
        .section:first-of-type {
            padding-top: 1.5rem;
        }
    }
    &-404 {
        background-color: var(--bs-white);
    }
}
@include color-mode(dark) {
    .page-wrap {
        &-404 {
            background-color: var(--convrtr-bg-dark) !important;
        }
    }
}
.sidebar-grid {
    grid-template-columns: 1fr;
    @media (min-width: 768px) {
        transition: all ease 0.3s;
        grid-template-columns: 4.5rem 1fr;
        &.open {
            grid-template-columns: 18rem 1fr;
        }
    }
}
.nav-bar {
    @media (max-width: 576px) {
        width: 100%;
    }
    @media (min-width: 576px) and (max-width: 768px) {
        width: 18rem;
    }
    @media (max-width: 768px) {
        position: fixed !important;
        top: 4rem !important;
        transform: translateX(-100%);
        transition: all ease 0.3s;
        visibility: hidden;
        z-index: 4;
        .sidebar-grid.open & {
            transition: all ease 0.3s;
            transform: translateX(0);
            visibility: visible;
        }
    }
    --bs-bg-opacity: 1;
    top: 4rem;
    height: calc(100vh - 4rem);
    background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
    scroll-snap-type: y mandatory;
    overscroll-behavior-y: none;
    scrollbar-width: none;
    @media screen and (prefers-reduced-motion: no-preference) {
        scroll-behavior: smooth;
    }
}
@include color-mode(dark) {
    .nav-bar {
        background-color: rgb(46 50 54) !important;
    }
}
.sidebar-grid.open .nav-bar {
    width: 18rem;
    @media (max-width: 576px) {
        width: 100%;
    }
}
.sidebar {
    height: 100%;
    .bi {
        vertical-align: 0;
    }
    &-item {
        &__link {
            --bs-text-opacity: 1;
            color: rgba(var(--bs-bg-success), var(--bs-text-opacity));
            background-color: var(--bs-white);
            @media (min-width: 576px) {
                position: relative;
            }
            &:hover,
            &:active,
            &:focus {
                background-color: var(--bs-bg-success-10);
            }
            &.active {
                background-color: var(--bs-bg-success-10);
                &:hover,
                &:active,
                &:focus {
                    background-color: var(--bs-bg-success-darken-10);
                }
            }
        }
        &__label {
            --bs-text-opacity: 0;
            color: rgba(var(--bs-bg-success), var(--bs-text-opacity));
            transition: all ease 0.3s;

            .sidebar-grid.open & {
                --bs-text-opacity: 1;
            }
        }
    }
    .dropdown-item {
        &:hover,
        &:active,
        &:focus {
            text-decoration: underline;
        }
    }
    .dropdown-toggle {
        max-width: 2.5rem !important;
    }
}
/* ... */

